--- a/css/index.css
+++ b/css/index.css
@@ -1,29 +1,50 @@
-
-.container > div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2em;
-  color: #ffeead;
+/* Navigation styles */
+.navbar-nav{
+  margin-left: auto;
+  margin-right: 0 !important;
 }
 
-html, body {
-background-color: #ffeead;
-margin: 10px;
+/* Card styles */
+.cardContainer {
+  margin-bottom: 15px;
+}
+.card {
+  margin: 0 auto;
 }
 
-.container > div:nth-child(1n) {
-background-color: #96ceb4;	
+/* About Me styles */
+ .col-sm-8 img {
+  height: 350px;
+ }
+ .col-sm-4 img {
+  height: 350px;
+  align-content: flex-start;
+ }
+
+/* Contact Me styles */
+.signUp form {
+  margin: 35px auto;
+  background-color: #f2f2f2;
+  padding: 25px;
+  border-radius: 7px;
 }
 
-.container > div:nth-child(3n) {
-background-color: #88d8b0;
+/* Footer styles */
+footer {
+  position: absolute;
+  width: 100%;
+  height: 180px;
+  line-height: 50px;
+  background-color: #BFD7D9;
+  cursor: pointer;
 }
-
-.container > div:nth-child(2n) {
-    background-color: #ff6f69;
+.containerF {
+  justify-content: space-evenly;
+  align-content: flex-start;
+  width: 100%;
+ margin-top: 50px;
 }
-
-.container > div:nth-child(4n) {
-    background-color: #ffcc5c;
-}
+.footer a{
+margin: 5px;
+padding-left: 40px;
+} 
